syntax = "proto3";

option java_multiple_files = true;
option java_package = "kr.com.rts.proto";
option java_outer_classname = "HelloPrt";

package protocc;

service MyProtoService {
    rpc giveMeData1(RequestMessage) returns (ResponseMessageStyle1); //송신 및 수신용 메소드1
    rpc giveMeData2(RequestMessage) returns (ResponseMessageStyle2); //송신 및 수신용 메소드2
}

message RequestMessage { //요청하는 객체
    string id = 1;
    string name = 2;
    float price = 3;
}

message ResponseMessageStyle1 {  //결과받는 객체1
    string result = 1;
    string status = 2;
}


message ResponseMessageStyle2 { //결과받는 객체2
    string result = 1;
    string status = 2;
    float statusCode = 3;
    RequestMessage yourRequest = 4;
}

